ubuntu-nginx-k8s/deployment-guestbook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook
  labels:
    app: guestbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook
  template:
    metadata:
      labels:
        app: guestbook
    spec:
      containers:
      - name: guestbook
        image: registry.ng.bluemix.net/itiro/renatinho
        ports:
        - name: http-server
          containerPort: 80
