ubuntu-nginx-k8s/service-guestbook.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook
  annotations:
    service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: private
  labels:
    app: guestbook
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: guestbook
  type: LoadBalancer
  loadBalancerSourceRanges:
  - "100.68.0.0/24"
